--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2603,7 +2603,7 @@ td {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background-image: url(assets/images/select-dropdwon-icon.png);
+  background-image: url(../images/select-dropdwon-icon.png);
   background-repeat: no-repeat;
   background-position-x: 90%;
   background-position-y: 18px;
@@ -3277,17 +3277,19 @@ option {
 
 .slid-screen-wrapper {
   .slide-btn {
-    left: 198px;
+    left: 199px;
   }
 }
 
 .slide-btn {
   position: relative;
-  top: 75px;
-  left: 6px;
+  top: 76px;
+  left: 7.5px;
   -moz-transition: all 300ms;
   -webkit-transition: all 300ms;
   transition: all 300ms;
+  display: inline-block;
+  z-index: 999;
 }
 
 .no-border {
@@ -4010,7 +4012,7 @@ grid-gap: 15px;
     background: transparent !important;
     .device-table-main {
       td {
-        padding-left: 8px !important;
+        // padding-left: 8px !important;
       }
     }
   }
@@ -4053,11 +4055,30 @@ right: 12px;
 
 
 // Assets Inventory Page CSS 
+.date-picker-div-assets-inventory {
+  display: grid;
+  grid-template-columns: auto minmax(200px, auto) minmax(150px, auto);
+  grid-gap: 15px;
+  align-items: center;
+  justify-content: flex-start;
+  .custom-select {
+    font-size: .9rem !important;
+    background-position-x: 96% !important;
+    background-position-y: 16px !important;
+    height: 41px;
+  }
+  input {
+    width: 100%;
+padding: 10px;
+border: 1px solid #cdcdd6;
+position: relative;
+  }
+}
 .assets-inventory-title-div {
   display: grid;
-grid-template-columns: 1fr 1fr;
-justify-content: center;
-align-items: center;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
 div {
   text-align: right;
   padding-right: 32px;
@@ -4067,7 +4088,34 @@ div {
   margin-left: 12px;
 }
 .assets-inventory-wrapper {
+  .dropdown-main-div {
+    .dropdown-div {
+      .dropdwon-top {
+        border: 0px solid #cdcdd6 !important;
+        border-bottom: 1px solid #cdcdd6 !important;
+      }
+    }
+  }
+  .table-heading-arrow {
+    top:3px !important;
+  }
+  .border-top-left input {
+    margin-left: 8px !important;
+    margin-right: 4px !important;
+  }
+  .child-row td:nth-child(2) {
+    padding-left: 8px !important;
+  }
+  .gray-row td {
+    background: #FAFAFA;
+  }
+  tr:hover td {
+    background: #EFEFEF;
+  }
   .tabs-aggre {
+    .nav-link {
+      border: 1px solid #ecedf2 !important;
+    }
     a.active {
       background: #fff;
       border: 1px solid #c4c4c4 !important;
@@ -4075,12 +4123,14 @@ div {
     button {
       padding: 15px 12px !important;
       display: flex;
+align-items: center;
+
       &::after {
         top: 18px !important;
       }
       .filter-icon-group {
         margin-right: 12px !important;
-       
+        width: 18px !important;
       }
     }
     .active {
