--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2c34eb; }
+  background: #6fb9b4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #91a43a; }
+  background: #1ae68d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4f7efd; }
+  background: #a1f8a3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #12673c; }
+  background: #cdb95e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #38d2cf; }
+  background: #a70501; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #311b17; }
+  background: #963074; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #357227; }
+  background: #1011b3; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #589be1; }
+  background: #6b35a0; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8342f9; }
+  background: #96137b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #4d2595; }
+  background: #1e61e9; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f170b8; }
+  background: #2bfc63; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #af74cd; }
+  background: #03ec64; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #57dc3a; }
+  background: #7d4f07; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #75a909; }
+  background: #02bbd4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ccb7c3; }
+  background: #684db4; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c987a6; }
+  background: #863a08; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9f433b; }
+  background: #5f7075; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #aa3ebb; }
+  background: #e110a8; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #52df03; }
+  background: #92e766; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d54afc; }
+  background: #337982; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #be6aa6; }
+  background: #f52d78; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9f4090; }
+  background: #cb35b0; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #afa520; }
+  background: #5347a6; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e025ed; }
+  background: #60ad45; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6f3afa; }
+  background: #477b9f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3e4721; }
+  background: #2a7c3c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #6352e8; }
+  background: #d31c1f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4ece06; }
+  background: #ef80fe; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b89e86; }
+  background: #b4dac5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #718c7c; }
+  background: #345d1d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6fa3af; }
+  background: #ca71f0; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #17e93c; }
+  background: #ceab7b; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e0fcc1; }
+  background: #d574a8; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #70ae48; }
+  background: #6a4963; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #5c1d57; }
+  background: #fee4f1; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d6439b; }
+  background: #1d4ba7; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3de84c; }
+  background: #3ef932; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #71f6a2; }
+  background: #da53d1; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c64dda; }
+  background: #925394; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #049085; }
+  background: #a16e69; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #db16fa; }
+  background: #0c0dce; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #a4df07; }
+  background: #557af0; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5b84e1; }
+  background: #b26488; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c563b8; }
+  background: #c1185b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #aade59; }
+  background: #744fe6; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #1e701f; }
+  background: #3a9359; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #91e655; }
+  background: #6eb1ce; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a76f90; }
+  background: #fedc98; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #7ab7e9; }
+  background: #1d6538; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3aa1e3; }
+  background: #84316e; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #bf492f; }
+  background: #87f142; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #a25df7; }
+  background: #cca865; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2a2f77; }
+  background: #2fe843; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #facab3; }
+  background: #ea3a7b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5f0a78; }
+  background: #100b5f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #5136a5; }
+  background: #07754c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #388b91; }
+  background: #b244f9; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cf0c1c; }
+  background: #45d650; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d1f071; }
+  background: #7b280b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #91fc7b; }
+  background: #03fdb3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #8cabd1; }
+  background: #521fc1; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #fadc5d; }
+  background: #47f68a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f0ee3d; }
+  background: #d47eaf; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #46e137; }
+  background: #336049; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #90e6cb; }
+  background: #199654; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f9cfe5; }
+  background: #d20234; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #19ea11; }
+  background: #4f3879; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #12a062; }
+  background: #67ff2e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #acc7ae; }
+  background: #0e1298; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a0f50f; }
+  background: #ca3008; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #603975; }
+  background: #668bcd; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ac5a3b; }
+  background: #c34e9f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #91ecc0; }
+  background: #838db1; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #1117d2; }
+  background: #416547; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #7934ae; }
+  background: #1053b4; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a17185; }
+  background: #b7e73a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1fcd8f; }
+  background: #3df9ec; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #beeb89; }
+  background: #793128; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ebc9c7; }
+  background: #c8a7c0; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #721cad; }
+  background: #1301c1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #ed366f; }
+  background: #9142e9; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6a934e; }
+  background: #696142; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b68174; }
+  background: #8a4077; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #74054b; }
+  background: #e1c44a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #648996; }
+  background: #4b6ade; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e08b2f; }
+  background: #0aa51b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5c3dc7; }
+  background: #b85c4b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #2c7977; }
+  background: #87a3f4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a8b2a4; }
+  background: #25df0d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4b0453; }
+  background: #db4027; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f4a3fd; }
+  background: #9217c8; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ab713e; }
+  background: #306f56; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c8c45a; }
+  background: #70dfe1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ec7da9; }
+  background: #5f2687; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f24b2e; }
+  background: #cb5ade; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3f4d38; }
+  background: #1a6095; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #409f64; }
+  background: #936d93; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #7f6bfb; }
+  background: #b56510; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #d9e827; }
+  background: #e5997f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #fe05ff; }
+  background: #5b394d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14270,7 +14270,7 @@ input:checked + .sliders-Not .not-blue-bg {
     width: 95%;
     padding: 15px;
     background: #fff;
-    z-index: 2;
+    z-index: 9;
     top: 40px;
     left: 0px; }
   .multiselect .dropdown-search-bar {
@@ -14962,7 +14962,7 @@ table .parent-row,
 
 .list-view-hover-wrapper {
   background: #fff;
-  padding: 35px 35px 35px 44px;
+  padding: 20px;
   border: 1px solid #c4c4c4; }
   .list-view-hover-wrapper .content-wrapper {
     display: flex;
@@ -15919,6 +15919,31 @@ option {
 .summary-details-row .eyes-icon-password input[type="checkbox"]:checked + label {
   background-image: url(../images/eye-show-icon-line.svg); }
 
+.grid-auto-div {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center; }
+
+.dropdown-connectors-list li .nav-link {
+  width: 100%; }
+
+.collapsed-dropdown-icon {
+  position: relative; }
+  .collapsed-dropdown-icon::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    display: inline-block;
+    background-image: url(../images/down-arrow.svg);
+    width: 16px;
+    height: 16px;
+    right: 0px;
+    background-repeat: no-repeat; }
+
+.table-submenu-lists {
+  padding-left: 30px;
+  padding-top: 10px; }
+
 .date-picker-div-assets-inventory {
   display: grid;
   grid-template-columns: auto minmax(200px, auto) minmax(150px, auto);
@@ -15948,9 +15973,15 @@ option {
 .query-icon {
   margin-left: 12px; }
 
+.assets-inventory-wrapper .table-submenu-list li a {
+  border: 1px solid #ecedf2; }
 .assets-inventory-wrapper .dropdown-main-div .dropdown-div .dropdwon-top {
+  padding-left: 0px !important;
+  padding-top: 0px !important;
   border: 0px solid #cdcdd6 !important;
   border-bottom: 1px solid #cdcdd6 !important; }
+  .assets-inventory-wrapper .dropdown-main-div .dropdown-div .dropdwon-top h3 {
+    font-weight: bold; }
 .assets-inventory-wrapper .table-heading-arrow {
   top: 3px !important; }
 .assets-inventory-wrapper .border-top-left input {
@@ -15981,12 +16012,12 @@ option {
   position: relative;
   border: 1px solid #c4c4c4; }
   .assets-inventory-wrapper .tabs-aggre .active::before {
-    width: 50px;
+    width: 6px;
     height: 100%;
     background: #fff;
     position: absolute;
     top: 0px;
-    right: -10px;
+    right: 188px;
     content: "";
     z-index: 99; }
 .assets-inventory-wrapper .tabs-aggre .card-body {
@@ -15997,6 +16028,16 @@ option {
       padding: 15px 12px 15px 42px !important; }
   .assets-inventory-wrapper .tabs-aggre .card-body .active-tab-side-submenu {
     border-radius: 0px !important; }
+
+.slid-screen-wrapper .tabs-aggre .active::before {
+  width: 50px;
+  height: 100%;
+  background: #fff;
+  position: absolute;
+  top: 0px;
+  right: -10px;
+  content: "";
+  z-index: 99; }
 
 @media screen and (max-width: 767px) {
   .four-dropdwon-div {
